added controller unit tests

--- a/etc/db.properties
+++ b/etc/db.properties
@@ -1,4 +1,4 @@
 db.class=com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/yourDB
-db.user = username
+db.url = jdbc:mysql://localhost:3306/libronuments
+db.user = root
 db.password = 123456
