added google maps integration and other visual changes

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ task demo (dependsOn: [clean, flywayClean, flywayMigrate, test, tomcatRunWar]) <
 war { 
     from('etc') { 
         include 'db.properties' 
+        include 'api.properties'
         include 'logback.xml' 
         into('WEB-INF/classes') 
     }
