--- a/etc/db.properties
+++ b/etc/db.properties
@@ -1,4 +1,4 @@
 db.class=com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://cloudtesting.czncvxin7ngd.us-east-2.rds.amazonaws.com:3306/libronuments?autoReconnect=true&useSSL=false
-db.user = ccaplan
-db.password = abcdef
+db.url = jdbc:mysql://XXXX:3306/libronuments?autoReconnect=true&useSSL=false
+db.user = XXXX
+db.password = XXXX
