change to use properties

--- a/etc/db.properties
+++ b/etc/db.properties
@@ -1,4 +1,4 @@
 db.class=com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://XXXX:3306/libronuments?autoReconnect=true&useSSL=false
-db.user = XXXX
-db.password = XXXX
+db.url = ${db.url}
+db.user = ${db.user}
+db.password = ${db.password}
