--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,10 @@
       </plugin>
     </plugins>
   </build>
- <distributionManagement/>
+    <distributionManagement>
+        <repository>
+            <id>maven.jenkins-ci.org</id>
+            <url>http://maven.jenkins-ci.org:8081/content/repositories/releases/</url>
+        </repository>
+</distributionManagement>
 </project>
