--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -37,7 +37,7 @@
         <configuration>
           <repository>dontbugme/ccap</repository>
           <tag>${project.version}</tag>
-          <!--<useMavenSettingsForAuth>true</useMavenSettingsForAuth>-->
+          <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
           <buildArgs>
             <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
           </buildArgs>
